# Buncker

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
buncker/: __init__.py  __main__.py  auth.py  compose.py  config.py  handler.py  registry_client.py  resolver.py  server.py  store.py  transfer.py
buncker_fetch/: __init__.py  __main__.py  cache.py  config.py  fetcher.py  registry_client.py  transfer.py
docs/: architecture.md  prd.md
docs/architecture/: 1-introduction.md  10-source-tree.md  11-infrastructure-and-deployment.md  12-error-handling-strategy.md  13-coding-standards.md  14-test-strategy.md  15-security.md  16-next-steps.md  2-high-level-architecture.md  3-tech-stack.md  4-data-models.md  5-components.md  6-external-apis.md  7-core-workflows.md  8-rest-api-spec.md  9-storage-schema.md  index.md
docs/prd/: 1-goals-and-background-context.md  2-scope.md  3-requirements.md  4-user-interface-design-goals.md  5-technical-assumptions.md  6-epic-list.md  7-epic-details.md  8-next-steps.md  index.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  2.1.story.md  2.2.story.md  2.3.story.md  2.4.story.md  2.5.story.md  3.1.story.md  3.2.story.md  (+21 more)
scripts/: build-in-docker-rpm.sh
shared/: crypto.py  exceptions.py  logging.py  oci.py  wordlist.py
tests/: test_packaging.py  test_placeholder.py
(+85 files in other folders)
