[project]
name = "buncker"
version = "1.0.2"
description = "Encrypted delta sync for air-gapped Docker builds"
license = "Apache-2.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"
markers = [
    "e2e: end-to-end tests (full USB cycle)",
]
